Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38052

'rowSpan' in QGridLayout::addWidget() can't be -1 when 'row' is the last row

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.1.1, 5.2.1, 5.3.0 RC1
    • Widgets: Layout
    • Windows 7 64-bit using MSVC 2012 and 2013.
    • 3ab6653d97a5dd01fd5f5cb4e52d5816274e4cbd

      One aspect of void QGridLayout::addLayout(QLayout * layout, int row, int column, int rowSpan, int columnSpan, Qt::Alignment alignment = 0) is described as "If rowSpan and/or columnSpan is -1, then the layout will extend to the bottom and/or right edge, respectively." in Qt Assitant.

      However, it turns out I can NOT set rowSpan to -1 when row>0 (and that is ,you can ONLY set rowSpan to -1 when row=0, same to column/columnSpan), or the debugger would give error "ASSERT failure in QVector<T>::at: "index out of range", file ..\..\include/QtCore/../../src/corelib/tools/qvector.h, line 350".

      maybe a bug, maybe just need more explaination and notes in Assistant.

        For Gerrit Dashboard: QTBUG-38052
        # Subject Branch Project Status CR V

            smd Jan Arve
            faye100 Fay Wong
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes